gccida/c0/resolve_unique_section
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/resolve_unique_section/src/varasm.c:929:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/resolve_unique_section/src/varasm.c:977:10: error: use of undeclared identifier 'resolve_unique_section_prefixes'
prefix = resolve_unique_section_prefixes[sec][( *( ( _DWORD *)&decla->decl + 12) >> 19) & 1]; 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/resolve_unique_section/src/obj/varasm.o] Error 1
